--- a/.github/workflows/deploy-modified.yml
+++ b/.github/workflows/deploy-modified.yml
@@ -80,6 +80,17 @@ jobs:
             exit 1
           fi
           
+          echo "=== DIAGNÓSTICO DE RUTAS (PRE-COMPILACIÓN) ==="
+          echo "1. Mostrando contenido de la sección 'styles' en angular.json:"
+          grep -A 10 '"styles"' angular.json || echo "No se encontró la sección 'styles'"
+          echo "----------------------------------------------------"
+          echo "2. Verificando la existencia de los archivos CSS globales:"
+          ls -l src/styles.css
+          ls -l src/assets/css/bootstrap-fixes.css
+          ls -l src/assets/css/mobile-styles.css
+          ls -l src/assets/css/container-fixes.css
+          echo "=== FIN DEL DIAGNÓSTICO DE RUTAS ==="
+
           echo "=== Actualizando configuración NGINX ==="
           sudo cp nginx.conf /etc/nginx/sites-enabled/loto-ia.com
           sudo nginx -t
@@ -102,8 +113,8 @@ jobs:
           echo "1. Verificando contenido de home.component.css en el servidor:"
           cat src/app/pages/home/home.component.css | grep -C 3 "ai-description" || echo "Regla .ai-description no encontrada en home.component.css"
           echo "----------------------------------------------------"
-          echo "2. Buscando la regla .ai-description en los archivos CSS compilados:"
-          grep -r ".ai-description" dist/tienda-web-loto-ai/browser/styles.*.css || echo "Regla .ai-description no encontrada en los CSS compilados."
+          echo "2. Buscando la regla .ai-description en los archivos CSS compilados (método robusto):"
+          find dist/tienda-web-loto-ai/browser/ -name "styles.*.css" -exec grep -H ".ai-description" {} + || echo "Regla .ai-description no encontrada en los CSS compilados."
           echo "----------------------------------------------------"
           echo "3. Listando archivos CSS compilados y sus timestamps:"
           ls -l dist/tienda-web-loto-ai/browser/*.css || echo "No se encontraron archivos .css en el directorio de build."
