--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -6,8 +6,9 @@
       "node"
     ]
   },
-  "files": [
+  "include": [
+    "server.ts",
     "src/main.server.ts",
-    "server.ts"
+    "src/backend/src/**/*.ts"
   ]
 }
