--- a/.github/workflows/deploy-modified.yml
+++ b/.github/workflows/deploy-modified.yml
@@ -70,7 +70,7 @@ jobs:
             
             # 9. Actualizar y recargar NGINX
             echo "--- Fase 7: Actualizando configuración de NGINX ---"
-            cp nginx.conf /etc/nginx/sites-available/default
+            cp nginx.conf /etc/nginx/sites-available/loto-ia.com
             nginx -t # Probar la sintaxis de la configuración
             if [ $? -eq 0 ]; then
               echo "✅ Sintaxis de NGINX correcta. Recargando NGINX..."
