--- a/nginx.conf
+++ b/nginx.conf
@@ -31,7 +31,6 @@ server {
     
     # Configuración para archivos estáticos
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-        root /var/www/tienda-web-lotoAI-1/dist/tienda-web-loto-ai/browser;
         expires 0;
         add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
         add_header Pragma "no-cache";
@@ -40,40 +39,9 @@ server {
         try_files $uri =404;
     }
     
-    location / {
-        proxy_pass http://localhost:4000;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_cache_bypass $http_upgrade;
-        
-        # Añade estos timeouts y configuraciones de buffer
-        proxy_connect_timeout 300s;
-        proxy_send_timeout 300s;
-        proxy_read_timeout 300s;
-        proxy_buffer_size 128k;
-        proxy_buffers 4 256k;
-        proxy_busy_buffers_size 256k;
-        
-        # Headers para dispositivos móviles
-        add_header X-UA-Compatible "IE=edge";
-        add_header X-Content-Type-Options "nosniff";
-        add_header X-Frame-Options "SAMEORIGIN";
-        add_header Vary "Accept-Encoding, User-Agent";
-        add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
-        
-        # Headers de seguridad adicionales
-        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-        add_header X-XSS-Protection "1; mode=block" always;
-        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-    }
-    
+    # API endpoints
     location /api {
-        proxy_pass http://localhost:3001;
+        proxy_pass http://localhost:3000;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -82,9 +50,22 @@ server {
         proxy_connect_timeout 60s;
         proxy_send_timeout 60s;
         proxy_read_timeout 60s;
-   }
+    }
+
+    # Frontend routes
+    location / {
+        try_files $uri $uri/ /index.csr.html;
+        add_header X-UA-Compatible "IE=edge";
+        add_header X-Content-Type-Options "nosniff";
+        add_header X-Frame-Options "SAMEORIGIN";
+        add_header Vary "Accept-Encoding, User-Agent";
+        add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+    }
     
-    # Bloquear acceso a archivos sensibles (añadir para mayor seguridad)
+    # Bloquear acceso a archivos sensibles
     location ~ \.env$ {
         deny all;
         return 404;
@@ -103,4 +84,4 @@ server {
         access_log off;
         log_not_found off;
     }
-} 
+}
